New `nightmode' theme option to switch to a white-on-black theme

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -41,6 +41,10 @@
 \newbool{jkubeamer@darkmode}
 \DeclareOptionBeamer{darkmode}[true]{\setbool{jkubeamer@darkmode}{#1}}
 
+% Option nightmode: white-on-black color mode
+\newbool{jkubeamer@nightmode}
+\DeclareOptionBeamer{nightmode}[true]{\setbool{jkubeamer@nightmode}{#1}}
+
 % Option mac: use adapted color palette for screen display on Mac
 \newbool{jkubeamer@maccolors}
 \DeclareOptionBeamer{mac}[true]{\setbool{jkubeamer@maccolors}{#1}}
@@ -169,7 +173,9 @@
 %% 
 %% Color palettes
 %% 
-\setbeamercolor*{palette primary}{bg=white,fg=black}
+\setbeamercolor*{palette primary day}{bg=white,fg=black}
+\setbeamercolor*{palette primary night}{bg=black,fg=white}
+\setbeamercolor*{palette primary}{parent=palette primary day}
 \setbeamercolor*{palette jku}{bg=white,fg=jkuGrey}
 \setbeamercolor*{palette med}{bg=white,fg=jkuYellow}
 \setbeamercolor*{palette re}{bg=white,fg=jkuRed}
@@ -179,7 +185,7 @@
 \setbeamercolor*{palette soe}{bg=white,fg=jkuPurple}
 \setbeamercolor*{palette bus}{bg=white,fg=jkuLightGreen}
 \setbeamercolor*{palette secondary}{parent=palette jku}
-\setbeamercolor*{palette tertiary}{bg=white,fg=jkuGrey}
+\setbeamercolor*{palette tertiary}{parent=palette jku}
 \setbeamercolor*{palette jku highlight}{bg=jkuDarkGrey,fg=jkuPurple}
 \setbeamercolor*{palette med highlight}{bg=jkuDarkGrey,fg=jkuGreen}
 \setbeamercolor*{palette re highlight}{bg=jkuDarkGrey,fg=jkuBlue}
@@ -340,7 +346,7 @@
     \setbool{jkubeamer@frame@transparentfooter}{#1}%
     \ifbool{jkubeamer@frame@transparentfooter}{%
         \begingroup%
-        \setbeamercolor{footline}{use=normal text,bg=,fg=normal text.fg}%
+        \setbeamercolor*{footline}{parent=normal text,bg=}%
     }{}%
 }
 
@@ -405,23 +411,27 @@
 % frame color mode switches
 \newcommand{\jkubeamer@currentcolormode}{default}
 \define@key{jkubeamer@kv@framecolormode}{light}[]{%
-    \setbeamercolor*{background canvas}{parent=palette secondary}%
+    \setbeamercolor*{background canvas}{parent=palette secondary,use=palette primary,bg=palette primary.bg}%
     \setbeamercolor*{normal text}{parent=palette primary}%
+    \setbeamercolor*{footline}{parent=palette primary}%
     \renewcommand{\jkubeamer@currentcolormode}{light}%
 }
 \define@key{jkubeamer@kv@framecolormode}{dark}[]{%
     \setbeamercolor*{background canvas}{use=palette secondary,bg=palette secondary.fg,fg=palette secondary.bg}%
-    \setbeamercolor*{normal text}{use=palette primary,bg=palette primary.fg,fg=palette primary.bg}%
+    \setbeamercolor*{normal text}{parent=palette primary,use=palette secondary,fg=palette secondary.bg}%
+    \setbeamercolor*{footline}{parent=palette primary}%
     \renewcommand{\jkubeamer@currentcolormode}{dark}%
 }
 \define@key{jkubeamer@kv@framecolormode}{black}[]{%
     \setbeamercolor*{background canvas}{use=palette primary,bg=palette primary.fg,fg=palette primary.bg}%
     \setbeamercolor*{normal text}{use=palette primary,bg=palette primary.fg,fg=palette primary.bg}%
+    \setbeamercolor*{footline}{parent=palette primary}%
     \renewcommand{\jkubeamer@currentcolormode}{black}%
 }
 \define@key{jkubeamer@kv@framecolormode}{grey}[]{%
     \setbeamercolor*{background canvas}{use=palette tertiary,bg=palette tertiary.fg,fg=palette tertiary.bg}%
     \setbeamercolor*{normal text}{use=palette tertiary,bg=palette tertiary.fg,fg=palette tertiary.bg}%
+    \setbeamercolor*{footline}{parent=palette primary}%
     \renewcommand{\jkubeamer@currentcolormode}{grey}%
 }
 \define@key{jkubeamer@kv@framecolormode}{gray}[]{\KV@jkubeamer@kv@framecolormode@grey{#1}}
@@ -450,13 +460,19 @@
 \newcommand{\setcolormode}[1][]{%
     % convert param to lowercase
     \begingroup\edef\@temp{\lowercase{\endgroup\def\noexpand\@temp@lcparam{#1}}}\@temp%
-    % preset default color palette
+    % preset default main color palette
+    \ifbool{jkubeamer@nightmode}{%
+        \setbeamercolor*{palette primary}{parent=palette primary night}%
+    }{%
+        \setbeamercolor*{palette primary}{parent=palette primary day}%
+    }%
+    % preset default faculty color palette
     \setkeys{jkubeamer@kv@colorpalette}{\jkubeamer@faculty}%
     % update color palette according to params
-    \begingroup\edef\@temp{\endgroup\noexpand\setkeys*{jkubeamer@kv@colorpalette}{\@temp@lcparam}}\@temp%
+    \begingroup\edef\@temp{\endgroup\noexpand\setkeys*{jkubeamer@kv@colorpalette}{\@temp@lcparam,}}\@temp%
     % update frame color mode according to params (presetting default frame color mode)
     \begingroup\edef\@temp{\endgroup\noexpand\setkeys{jkubeamer@kv@framecolormode}{default,\XKV@rm}}\@temp%
-    \setbeamercolor*{background canvas}{parent=palette secondary}%
+    \setbeamercolor*{background canvas}{parent=palette primary}%
     \setbeamercolor*{normal text}{parent=palette primary}%
     \setbeamercolor*{footline}{parent=palette primary}%
 }
