--- a/main.tex
+++ b/main.tex
@@ -1118,9 +1118,9 @@ There is also a starred version \verb|\jkulogo*[<mode options>]|, which always u
 \begin{frame}[containsverbatim]
 \frametitle{Switching Color Mode and Scheme}
 
-Just like switching the color mode and scheme for a specific special slide, you can also switch the color mode for the remaining part of the presentation. This may be useful if you want to create a presentation with parts focusing on more than one faculty.
+Just like switching the color mode and scheme for a specific special slide, you can also switch the color mode for the remaining part of the presentation. This may be useful if you want to create a presentation with parts focusing on more than one faculty. You can also use ``\textverb{night}'' and ``\textverb{nonight}'' to switch night mode on or off within the presentation.
 
-Use \verb|\setcolormode[<mode options>]| to change the color mode.
+Use \verb|\setcolormode[<mode options>]| to change the color mode (reset to default if no options are given).
 \end{frame}
 
 
