Add fixups for minted analogous to https://github.com/michaelroland/jku-templates-report-latex/pull/7

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -37,6 +37,17 @@
 \RequirePackage{listings}
 \RequirePackage{verbatim}
 \RequirePackage{relsize}
+\RequirePackage{scrlfile}
+
+% Conditionally load packages that we do not always need or that may cause conflicts with others
+\AtEndPreamble{%
+    \@ifpackageloaded{minted}{}{%
+        % minted and listings can't co-exist when some other packages are loaded by the user.
+        % to avoid failure, we only load the listings package if minted was not loaded
+        % by the user
+        \RequirePackage{listings}%
+    }%
+}
 
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -513,31 +524,85 @@
 % Command \textverb{...}: Display argument in verbatim font (unlike with \verb|...|, the argument is not treated as verbatim).
 \newcommand{\textverb}[1]{{\verbatim@font #1}}
 
-\lstset{%
-    %language=[LaTeX]TeX,
-    extendedchars=true,
-    columns=fullflexible, % since we are using a fixed-width font anyways
-    keepspaces=true,      % needs to be set to maintain fixed-width property of spaces with fullflexible
-    %fontadjust=true,
-    numbers=left,
-    numberstyle=\relsize{-4}\jkubeamer@verbfamily,
-    %stepnumber=1,
-    basicstyle=\relsize{-1}\jkubeamer@verbfamily,
-    commentstyle=\crGreen\itshape,
-    keywordstyle=\crBlue\bfseries,
-    stringstyle=\crPurple,
-    tabsize=4,
-    showtabs=false,
-    showspaces=false,
-    showstringspaces=true,
-    breaklines=true,
-    %frame=tb,
-    %framerule=0.5pt,
-    %framexleftmargin=0.5em,
-    %framexrightmargin=0.5em,
-    %xleftmargin=0.5em,
-    %xrightmargin=0.5em,
+% set defaults for listings package, if loaded
+\AfterPackage*{listings}{%
+    \lstset{%
+        %language=[LaTeX]TeX,
+        extendedchars=true,
+        columns=fullflexible, % since we are using a fixed-width font anyways
+        keepspaces=true,      % needs to be set to maintain fixed-width property of spaces with fullflexible
+        %fontadjust=true,
+        numbers=left,
+        numberstyle=\relsize{-4}\jkubeamer@verbfamily,
+        %stepnumber=1,
+        basicstyle=\relsize{-1}\jkubeamer@verbfamily,
+        commentstyle=\crGreen\itshape,
+        keywordstyle=\crBlue\bfseries,
+        stringstyle=\crPurple,
+        tabsize=4,
+        showtabs=false,
+        showspaces=false,
+        showstringspaces=true,
+        breaklines=true,
+        %frame=tb,
+        %framerule=0.5pt,
+        %framexleftmargin=0.5em,
+        %framexrightmargin=0.5em,
+        %xleftmargin=0.5em,
+        %xrightmargin=0.5em,
+        captionpos=b,
+        abovecaptionskip=1em,
+    }
+    
+    \let\origthelstnumber\thelstnumber
+    \newcommand*{\lstSuppressnumber}{%
+        \lst@AddToHook{OnNewLine}{%
+            \let\thelstnumber\relax%
+        }%
+    }
+
+    \newcommand*{\lstReactivatenumber}{%
+        \lst@AddToHook{OnNewLine}{%
+            \let\thelstnumber\origthelstnumber%
+        }%
+    }
+
+    \newcommand*{\lstReactivatenumberN}[1]{%
+        \setcounter{lstnumber}{\numexpr#1-1\relax}%
+        \lst@AddToHook{OnNewLine}{%
+            \let\thelstnumber\origthelstnumber%
+        }%
+    }
 }
+
+% set defaults for fancyvrb package (and in turn for the minted package), if loaded
+\AfterPackage*{fancyvrb}{%
+    \fvset{%
+        fontsize=\relsize{-1},
+        formatcom=\jkubeamer@verbfamily,
+        numbers=left,
+        tabsize=4,
+        %showtabs=false,
+        %showspaces=false,
+        %frame=lines,
+        %framerule=0.5pt,
+        %framesep=1.5\fboxsep,
+    }%
+    \renewcommand{\theFancyVerbLine}{%
+        \relsize{-1}\jkubeamer@verbfamily%
+        \arabic{FancyVerbLine}%
+    }%
+}
+
+% set defaults for minted package, if loaded
+\AfterPackage*{minted}{%
+    \setminted{%
+        breaklines=true,
+    }%
+}
+
+%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
