--- a/main.tex
+++ b/main.tex
@@ -159,6 +159,8 @@
 %% a package `booktabs', you would use the command `\usepackage{booktabs}'.
 %% 
 
+\usepackage{listings}
+%\usepackage{minted}
 \usepackage{booktabs}
 \usepackage{tabularx}
 %\usepackage{pifont}
