--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -1882,7 +1882,7 @@
     \node[anchor=north east,line width=0mm, inner sep=0mm] at ($(current page.north east)$) {
         \usebeamercolor[fg]{normal text}%
         \expandafter\notblank\expandafter{\jkubeamer@frameimage}{%
-            \resizebox{!}{\paperheight}{\mbox{\jkubeamer@frameimage}}%
+            \resizebox{!}{\paperheight}{\mbox{\jkubeamer@frameimage\unskip}}%
         }{}%
     };
     \fill[fill=background canvas.bg] (current page.south west) rectangle ($(current page.north west) + (0.3\paperwidth, 0)$);
