Add support for optional navigation symbols

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -252,6 +252,8 @@
 \setbeamercolor*{date in head/foot}{parent=section in head/foot}
 \setbeamercolor*{footnote}{parent=normal text}
 \setbeamercolor*{footnote mark}{parent=normal text}
+\setbeamercolor*{navigation symbols}{fg=fg!50!bg,bg=bg}
+\setbeamercolor*{navigation symbols dimmed}{fg=fg!50!bg,bg=bg}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
