--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -399,6 +399,8 @@
 \setbeamerfont*{date in head/foot}{parent=section in head/foot}
 \setbeamerfont*{footnote}{parent=normal text, size=\relsize{-2}}
 \setbeamerfont*{footnote mark}{parent=normal text, size=\relsize{-4}}
+\setbeamerfont*{navigation symbols}{parent=footline}
+\setbeamerfont*{navigation symbols dimmed}{parent=footline}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
