--- a/main.tex
+++ b/main.tex
@@ -131,6 +131,7 @@
 %%  * nojkulogo          ... Do not insert JKU & K logos on title pages and in frame footers.
 %%  * noinstitutelogo    ... Do not use institute logo instead of the standard JKU logo if
 %%                           \institutecode is set.
+%%  * navigation         ... Show navigation symbols at the bottom of slides.
 %%  * frametitlecaps     ... Set frame titles in capital letters (like in earlier theme versions).
 %%  * nofancyfonts       ... Do not use custom TTF fonts with XeTeX/LuaTeX / supress pdfLaTeX warning.
 %%  * mac                ... Use adapted color palette for screen display on Mac.
