Add support for an optional copyright notice on the left margin of slides

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -258,6 +258,15 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 
+%% Copyright notice and water mark
+%% 
+\setbeamercolor*{copyright notice}{parent=normal text}
+%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% 
 %% Contact frames
 %% 
 \setbeamercolor*{contacttitle}{parent=title}
