--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -405,6 +405,15 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 
+%% Copyright notice and water mark
+%% 
+\setbeamerfont*{copyright notice}{parent=structure, size*={6pt}{7pt}}
+%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% 
 %% Contact frames
 %% 
 \setbeamerfont*{contacttitle}{parent=title}
