--- a/main.tex
+++ b/main.tex
@@ -1110,7 +1110,7 @@ There is also a starred version \textverb{\string\jkulogo*[<mode options>]}, whi
 
 Just like switching the color mode and scheme for a specific special slide, you can also switch the color mode for the remaining part of the presentation. This may be useful if you want to create a presentation with parts focusing on more than one faculty. You can also use ``\textverb{night}'' and ``\textverb{nonight}'' to switch night mode on or off within the presentation.
 
-Use \textverb{\setcolormode[<mode options>]} to change the color mode (reset to default if no options are given).
+Use \textverb{\string\setcolormode[<mode options>]} to change the color mode (reset to default if no options are given).
 \end{frame}
 
 
