Add support for slide watermarks

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -258,9 +258,11 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 
-%% Copyright notice and water mark
+%% Copyright notice and watermark
 %% 
 \setbeamercolor*{copyright notice}{parent=normal text}
+\setbeamercolor*{watermark}{parent=normal text}
+\setbeamercolor*{watermark title}{parent=watermark}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
