--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -405,9 +405,11 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 
-%% Copyright notice and water mark
+%% Copyright notice and watermark
 %% 
 \setbeamerfont*{copyright notice}{parent=structure, size*={6pt}{7pt}}
+\setbeamerfont*{watermark}{parent=structure, size*={14pt}{16.8pt}}
+\setbeamerfont*{watermark title}{parent=watermark, family=\sfblackfamily, series=\bfseries, size*={22pt}{26.4pt}}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
